# ingress-status-sync

./: .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile
src/: main.rs
