# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "ingress-status-sync"
version = "0.0.1"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[features]
strict = []

[dependencies]
gumdrop = "0.8.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }
kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
kube-runtime = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[profile.release]
lto = true
codegen-units = 1
